syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/grpc/shared";
package shared;
import "google/protobuf/empty.proto";

message ChatMessageMessageFragmentCheermote {
	string prefix = 1;
	int64 bits = 2;
	int64 tier = 3;
}

message ChatMessageMessageFragmentEmote {
	string id = 1;
	string emote_set_id = 2;
	string owner_id = 3;
	repeated string format = 4;
}

message ChatMessageMessageFragmentMention {
	string user_id = 1;
	string user_name = 2;
	string user_login = 3;
}

enum FragmentType {
	TEXT = 0;
	CHEERMOTE = 1;
	EMOTE = 2;
	MENTION = 3;
}

message ChatMessageMessageFragment {
	FragmentType type = 1;
	string text = 2;
	ChatMessageMessageFragmentCheermote cheermote = 3;
	ChatMessageMessageFragmentEmote emote = 4;
	ChatMessageMessageFragmentMention mention = 5;
}

message ChatMessageMessage {
	string text = 1;
	repeated ChatMessageMessageFragment fragments = 2;
}

message ChatMessageBadge {
	string id = 1;
	string set_id = 2;
	string info = 3;
}

message ChatMessageCheer {
	int64 bits = 1;
}

message ChatMessageReply {
	string parent_message_id = 1;
	string parent_message_body = 2;
	string parent_user_id = 3;
	string parent_user_name = 4;
	string parent_user_login = 5;
	string thread_message_id = 6;
	string thread_user_id = 7;
	string thread_user_name = 8;
	string thread_user_login = 9;
}

message TwitchChatMessage {
	string broadcaster_user_id = 1;
	string broadcaster_user_name = 2;
	string broadcaster_user_login = 3;
	string chatter_user_id = 4;
	string chatter_user_name = 5;
	string chatter_user_login = 6;
	string message_id = 7;
	ChatMessageMessage message = 8;
	string color = 9;
	repeated ChatMessageBadge badges = 10;
	string message_type = 11;
	ChatMessageCheer cheer = 12;
	ChatMessageReply reply = 13;
	string channel_points_custom_reward_id = 14;
}
